@@ -24,17 +24,11 @@ import static java.util.Collections.emptyMap;
 import static java.util.Collections.emptySet;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.hamcrest.Matchers.startsWith;
-import static org.junit.Assert.assertNotSame;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertThat;
 
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.elasticsearch.Version;
 import org.elasticsearch.cluster.node.DiscoveryNode;
@@ -42,6 +36,7 @@ import org.elasticsearch.cluster.routing.UnassignedInfo.AllocationStatus;
 import org.elasticsearch.cluster.routing.allocation.decider.Decision;
 import org.elasticsearch.common.io.stream.BytesStreamOutput;
 import org.elasticsearch.test.ESTestCase;
+import org.junit.Test;
 
 /**
  * Unit tests for the {@link AllocateUnassignedDecision} class.
@@ -51,6 +46,7 @@ public class AllocateUnassignedDecisionTests extends ESTestCase {
     private DiscoveryNode node1 = new DiscoveryNode("node1", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT);
     private DiscoveryNode node2 = new DiscoveryNode("node2", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT);
 
+    @Test
     public void testDecisionNotTaken() {
         AllocateUnassignedDecision allocateUnassignedDecision = AllocateUnassignedDecision.NOT_TAKEN;
         assertThat(allocateUnassignedDecision.isDecisionTaken()).isFalse();
@@ -68,6 +64,7 @@ public class AllocateUnassignedDecisionTests extends ESTestCase {
             .isExactlyInstanceOf(IllegalStateException.class);
     }
 
+    @Test
     public void testNoDecision() {
         final AllocationStatus allocationStatus = randomFrom(
             AllocationStatus.DELAYED_ALLOCATION, AllocationStatus.NO_VALID_SHARD_COPY, AllocationStatus.FETCHING_SHARD_DATA
@@ -80,14 +77,14 @@ public class AllocateUnassignedDecisionTests extends ESTestCase {
             assertThat(noDecision.getExplanation()).isEqualTo("cannot allocate because information about existing shard data is still being retrieved from " +
                          "some of the nodes");
         } else if (allocationStatus == AllocationStatus.DELAYED_ALLOCATION) {
-            assertThat(noDecision.getExplanation(), startsWith("cannot allocate because the cluster is still waiting"));
+            assertThat(noDecision.getExplanation()).startsWith("cannot allocate because the cluster is still waiting");
         } else {
-            assertThat(noDecision.getExplanation(),
-                       startsWith("cannot allocate because a previous copy of the primary shard existed"));
+            assertThat(noDecision.getExplanation())
+                .startsWith("cannot allocate because a previous copy of the primary shard existed");
         }
-        assertNull(noDecision.getNodeDecisions());
-        assertNull(noDecision.getTargetNode());
-        assertNull(noDecision.getAllocationId());
+        assertThat(noDecision.getNodeDecisions()).isNull();
+        assertThat(noDecision.getTargetNode()).isNull();
+        assertThat(noDecision.getAllocationId()).isNull();
 
         List<NodeAllocationResult> nodeDecisions = new ArrayList<>();
         nodeDecisions.add(new NodeAllocationResult(node1, Decision.NO, 1));
@@ -102,17 +99,18 @@ public class AllocateUnassignedDecisionTests extends ESTestCase {
         } else {
             assertThat(noDecision.getExplanation()).isEqualTo("cannot allocate because allocation is not permitted to any of the nodes");
         }
-        assertThat(noDecision.getNodeDecisions()).isEqualTo(nodeDecisions.stream().sorted().collect(Collectors.toList()));
+        assertThat(noDecision.getNodeDecisions()).isEqualTo(nodeDecisions.stream().sorted().toList());
         // node1 should be sorted first b/c of better weight ranking
-        assertThat(noDecision.getNodeDecisions().iterator().next().getNode().getId()).isEqualTo("node1");
-        assertNull(noDecision.getTargetNode());
-        assertNull(noDecision.getAllocationId());
+        assertThat(noDecision.getNodeDecisions().getFirst().getNode().getId()).isEqualTo("node1");
+        assertThat(noDecision.getTargetNode()).isNull();
+        assertThat(noDecision.getAllocationId()).isNull();
 
         // test bad values
         assertThatThrownBy(() -> AllocateUnassignedDecision.no(null, null))
             .isExactlyInstanceOf(NullPointerException.class);
     }
 
+    @Test
     public void testThrottleDecision() {
         List<NodeAllocationResult> nodeDecisions = new ArrayList<>();
         nodeDecisions.add(new NodeAllocationResult(node1, Decision.NO, 1));
@@ -121,14 +119,15 @@ public class AllocateUnassignedDecisionTests extends ESTestCase {
         assertThat(throttleDecision.isDecisionTaken()).isTrue();
         assertThat(throttleDecision.getAllocationDecision()).isEqualTo(AllocationDecision.THROTTLED);
         assertThat(throttleDecision.getAllocationStatus()).isEqualTo(AllocationStatus.DECIDERS_THROTTLED);
-        assertThat(throttleDecision.getExplanation(), startsWith("allocation temporarily throttled"));
-        assertThat(throttleDecision.getNodeDecisions()).isEqualTo(nodeDecisions.stream().sorted().collect(Collectors.toList()));
+        assertThat(throttleDecision.getExplanation()).startsWith("allocation temporarily throttled");
+        assertThat(throttleDecision.getNodeDecisions()).isEqualTo(nodeDecisions.stream().sorted().toList());
         // node2 should be sorted first b/c a THROTTLE is higher than a NO decision
-        assertThat(throttleDecision.getNodeDecisions().iterator().next().getNode().getId()).isEqualTo("node2");
-        assertNull(throttleDecision.getTargetNode());
-        assertNull(throttleDecision.getAllocationId());
+        assertThat(throttleDecision.getNodeDecisions().getFirst().getNode().getId()).isEqualTo("node2");
+        assertThat(throttleDecision.getTargetNode()).isNull();
+        assertThat(throttleDecision.getAllocationId()).isNull();
     }
 
+    @Test
     public void testYesDecision() {
         List<NodeAllocationResult> nodeDecisions = new ArrayList<>();
         nodeDecisions.add(new NodeAllocationResult(node1, Decision.NO, 1));
@@ -138,15 +137,16 @@ public class AllocateUnassignedDecisionTests extends ESTestCase {
             node2, allocId, nodeDecisions, randomBoolean());
         assertThat(yesDecision.isDecisionTaken()).isTrue();
         assertThat(yesDecision.getAllocationDecision()).isEqualTo(AllocationDecision.YES);
-        assertNull(yesDecision.getAllocationStatus());
+        assertThat(yesDecision.getAllocationStatus()).isNull();
         assertThat(yesDecision.getExplanation()).isEqualTo("can allocate the shard");
-        assertThat(yesDecision.getNodeDecisions()).isEqualTo(nodeDecisions.stream().sorted().collect(Collectors.toList()));
+        assertThat(yesDecision.getNodeDecisions()).isEqualTo(nodeDecisions.stream().sorted().toList());
         assertThat(yesDecision.getTargetNode().getId()).isEqualTo("node2");
         assertThat(yesDecision.getAllocationId()).isEqualTo(allocId);
         // node1 should be sorted first b/c YES decisions are the highest
-        assertThat(yesDecision.getNodeDecisions().iterator().next().getNode().getId()).isEqualTo("node2");
+        assertThat(yesDecision.getNodeDecisions().getFirst().getNode().getId()).isEqualTo("node2");
     }
 
+    @Test
     public void testCachedDecisions() {
         List<AllocationStatus> cacheableStatuses = Arrays.asList(AllocationStatus.DECIDERS_NO, AllocationStatus.DECIDERS_THROTTLED,
                                                                  AllocationStatus.NO_VALID_SHARD_COPY, AllocationStatus.FETCHING_SHARD_DATA, AllocationStatus.DELAYED_ALLOCATION);
@@ -154,17 +154,17 @@ public class AllocateUnassignedDecisionTests extends ESTestCase {
             if (allocationStatus == AllocationStatus.DECIDERS_THROTTLED) {
                 AllocateUnassignedDecision cached = AllocateUnassignedDecision.throttle(null);
                 AllocateUnassignedDecision another = AllocateUnassignedDecision.throttle(null);
-                assertSame(cached, another);
+                assertThat(another).isSameAs(cached);
                 AllocateUnassignedDecision notCached = AllocateUnassignedDecision.throttle(new ArrayList<>());
                 another = AllocateUnassignedDecision.throttle(new ArrayList<>());
-                assertNotSame(notCached, another);
+                assertThat(another).isNotSameAs(notCached);
             } else {
                 AllocateUnassignedDecision cached = AllocateUnassignedDecision.no(allocationStatus, null);
                 AllocateUnassignedDecision another = AllocateUnassignedDecision.no(allocationStatus, null);
-                assertSame(cached, another);
+                assertThat(another).isSameAs(cached);
                 AllocateUnassignedDecision notCached = AllocateUnassignedDecision.no(allocationStatus, new ArrayList<>());
                 another = AllocateUnassignedDecision.no(allocationStatus, new ArrayList<>());
-                assertNotSame(notCached, another);
+                assertThat(another).isNotSameAs(notCached);
             }
         }
 
@@ -172,9 +172,10 @@ public class AllocateUnassignedDecisionTests extends ESTestCase {
         AllocateUnassignedDecision first = AllocateUnassignedDecision.yes(node1, "abc", emptyList(), randomBoolean());
         AllocateUnassignedDecision second = AllocateUnassignedDecision.yes(node1, "abc", emptyList(), randomBoolean());
         // same fields for the ShardAllocationDecision, but should be different instances
-        assertNotSame(first, second);
+        assertThat(second).isNotSameAs(first);
     }
 
+    @Test
     public void testSerialization() throws IOException {
         DiscoveryNode node1 = new DiscoveryNode("node1", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT);
         DiscoveryNode node2 = new DiscoveryNode("node2", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT);
@@ -203,7 +204,6 @@ public class AllocateUnassignedDecisionTests extends ESTestCase {
         assertThat(readDecision.getAllocationId()).isEqualTo(decision.getAllocationId());
         assertThat(readDecision.getAllocationDecision()).isEqualTo(decision.getAllocationDecision());
         // node2 should have the highest sort order
-        assertThat(readDecision.getNodeDecisions().iterator().next().getNode().getId()).isEqualTo("node2");
+        assertThat(readDecision.getNodeDecisions().getFirst().getNode().getId()).isEqualTo("node2");
     }
-
 }
